--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "author": "YourNameOrOrganization",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.4"
+    "@actions/core": "^1.2.4",
+    "eslint-config-oclif-typescript": "^0.2.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.3",
